[project]
name = "mactoast"
version = "0.0.3"
description = "Simple, customizable toast notifications for macOS"
readme = "README.md"
authors = [
    { name = "rafa-rrayes", email = "rafa@rayes.com.br", url = "https://github.com/rafa-rrayes" }
]
requires-python = ">=3.8"
keywords = ["macos", "notification", "toast", "popup", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment",
]

[project.urls]
Homepage = "https://github.com/rafa-rrayes/"
Repository = "https://github.com/rafa-rrayes/mactoast"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.setuptools.packages.find]
where = ["."]
include = ["mactoast*"]

[tool.setuptools.package-data]
# Include the whole app bundle
"mactoast" = ["ToastHUD.app/**"]